--- a/Mapping_Single_Points/index.html
+++ b/Mapping_Single_Points/index.html
@@ -13,7 +13,7 @@
         crossorigin="" />
 
     <!-- Our CSS -->
-    <link rel="stylesheet" type="text/css" href="static/css/style.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/style.css">
 
 </head>
 
@@ -28,10 +28,10 @@
         crossorigin=""></script>
 
     <!-- API key -->
-    <script type="text/javascript" src="static/js/config.js"></script>
+    <script type="text/javascript" src="../static/js/config.js"></script>
     
     <!-- Our JavaScript -->
-    <script type="text/javascript" src="static/js/logic.js"></script>
+    <script type="text/javascript" src="../static/js/logic.js"></script>
 
 </body>
 
