--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <script type="text/javascript" src="./static/js/config.js"></script>
 
     <!-- Our JavaScript -->
-    <script type="text/javascript" src="./static/js/logic_step_5.js"></script>
+    <script type="text/javascript" src="./static/js/Challenge_logic_ D1.js"></script>
 
 </body>
 
